# duckdb-spanner-cxx

./: CMakeLists.txt  Makefile  README.md  extension_config.cmake  vcpkg.json
.github/workflows/: MainDistributionPipeline.yml
src/: spanner_client.cpp  spanner_copy.cpp  spanner_extension.cpp  spanner_query.cpp  spanner_scan.cpp  spanner_types.cpp  spanner_utils.cpp
src/include/: spanner_client.hpp  spanner_copy.hpp  spanner_extension.hpp  spanner_query.hpp  spanner_scan.hpp  spanner_types.hpp  spanner_utils.hpp
test/sql/: spanner.test  spanner_json.test
